# tokensense

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml  tokensense_project.md
.claude/: settings.json  settings.json.example  settings.local.json
benchmarks/: run.py  scenarios.py  summarizer_models.py
docs/: decisions.md
scripts/: create_user_database.py  migrate_add_project_id.py
tests/: fakes.py  test_cache_decision.py  test_cache_wiring.py  test_documents.py  test_live_integration.py  test_live_mcp_stdio.py  test_live_ollama.py  test_mcp_server.py  test_middleware.py  test_project_resolve.py  test_proxy.py  test_server_engine.py  test_store_isolation.py  test_tracker.py  test_transcript_ingest.py  test_transport_parity.py
tokensense/: __init__.py  client.py  middleware.py  project.py  tracker.py
tokensense/cache/: decision.py
tokensense/memory/: documents.py  embedder.py  retriever.py  store.py
tokensense/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
tokensense/server/: __init__.py  cli.py  config.py  engine.py  mcp_server.py  project_resolve.py  proxy.py  sessions.py  transcript.py
tokensense/summarizers/: base.py  litellm.py  ollama.py
